<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllDrugs"
    android:background="@drawable/backgroundimg">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/wszystkieleki" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="304dp"
        android:layout_height="349dp"
        android:background="@color/lightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TableLayout
            android:id="@+id/tableAllDrugs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp"
            android:stretchColumns="0,1,2">

            <TableRow
                android:id="@+id/tableRow"
                android:background="@color/grey_1"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tableAtributeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/nazwaLeku"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tableAtributeDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dataWaznosciLeku"
                    android:textColor="@color/white" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRemoveDrug"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="44dp"
        android:onClick="btnRemoveDrug"
        android:text="@string/usunLek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <Button
        android:id="@+id/btnAddDrug"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:onClick="btnAddDrug"
        android:text="@string/dodajLek"
        app:layout_constraintEnd_toStartOf="@+id/btnRemoveDrug"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll" />

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="134dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRemoveDrug">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/return_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnStartDrug"
                app:layout_constraintHorizontal_bias="0.352"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/return_btn" />

            <Button
                android:id="@+id/btnStartDrug"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginEnd="76dp"
                android:backgroundTint="@color/grey_1"
                android:text="@string/rozpDawkowanie"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>